# cp

./: .gitignore  Cargo.toml  README.md  check.ps1  run.ps1
notebook/: Cargo.toml  matrix.rs
notebook/src/: disjoint_set.rs  lib.rs  matrix_adj_iter.rs  segment_tree.rs  sieve.rs  zn.rs
notebook/templates/: main.rs
templates/: main.c  main.rs
