[package]
name = "cp"
version = "0.1.0"
edition = "2024"
default-run = "run"

[[bin]]
name = "run"
path = "src/bin/run.rs"

[[bin]]
name = "check"
path = "src/bin/check.rs"

[[bin]]
name = "new"
path = "src/bin/new.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"

